--- a/Forks/Deep-Learning-Papers-Reading-Roadmap-master/pdfs/3_Applications/37_Art/[1]_Mordvintsev,_Alexander;_Olah,_Christopher;_Tyka,_Mike_(2015)_Inceptionism__Going_Deeper_into_Neural_Networks_Google_Research_.html
+++ b/Forks/Deep-Learning-Papers-Reading-Roadmap-master/pdfs/3_Applications/37_Art/[1]_Mordvintsev,_Alexander;_Olah,_Christopher;_Tyka,_Mike_(2015)_Inceptionism__Going_Deeper_into_Neural_Networks_Google_Research_.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class='v2 detail-page' dir='ltr' itemscope='' itemtype='http://schema.org/Blog' lang='en' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
 <head>
-<link href='https://www.blogger.com/static/v1/widgets/73244247-css_bundle_v2.css' rel='stylesheet' type='text/css'/>
+<link href='https://www.blogger.com/static/v1/widgets/2437439463-css_bundle_v2.css' rel='stylesheet' type='text/css'/>
 <title>
 Research Blog: Inceptionism: Going Deeper into Neural Networks
 </title>
@@ -256,7 +256,7 @@ margin-bottom: initial;
 <link rel="service.post" type="application/atom+xml" title="Research Blog - Atom" href="https://www.blogger.com/feeds/21224994/posts/default" />
 
 <link rel="alternate" type="application/atom+xml" title="Research Blog - Atom" href="https://research.googleblog.com/feeds/5675413448691562451/comments/default" />
-<!--[if IE]><script type="text/javascript" src="https://www.blogger.com/static/v1/jsbin/3858758734-ieretrofit.js"></script>
+<!--[if IE]><script type="text/javascript" src="https://www.blogger.com/static/v1/jsbin/3658603751-ieretrofit.js"></script>
 <![endif]-->
 <link href='https://4.bp.blogspot.com/-tTYZpdJ18bg/VYITAO4s_uI/AAAAAAAAAlE/L7VMImFFt_M/s640/noise-to-banana.png' rel='image_src'/>
 <meta content='https://research.googleblog.com/2015/06/inceptionism-going-deeper-into-neural.html' property='og:url'/>
@@ -1023,7 +1023,7 @@ margin-bottom: initial;
         ga('create', 'UA-3589841-1', 'auto', 'blogger');
         ga('blogger.send', 'pageview');
       </script>
-<link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=21224994&amp;zx=5c9f6dd1-f759-4484-a82b-391192aa63a0' media='none' onload='if(media!=&#39;all&#39;)media=&#39;all&#39;' rel='stylesheet'/><noscript><link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=21224994&amp;zx=5c9f6dd1-f759-4484-a82b-391192aa63a0' rel='stylesheet'/></noscript>
+<link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=21224994&amp;zx=3dcbcd33-204a-40c5-a220-9380832831aa' media='none' onload='if(media!=&#39;all&#39;)media=&#39;all&#39;' rel='stylesheet'/><noscript><link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=21224994&amp;zx=3dcbcd33-204a-40c5-a220-9380832831aa' rel='stylesheet'/></noscript>
 </head>
 <body>
 <script type='text/javascript'>
@@ -1394,6 +1394,11 @@ Art
 <li>
 <a dir='ltr' href='https://research.googleblog.com/search/label/Audio'>
 Audio
+</a>
+</li>
+<li>
+<a dir='ltr' href='https://research.googleblog.com/search/label/Augmented%20Reality'>
+Augmented Reality
 </a>
 </li>
 <li>
@@ -2047,6 +2052,11 @@ patents
 </a>
 </li>
 <li>
+<a dir='ltr' href='https://research.googleblog.com/search/label/Peer%20Review'>
+Peer Review
+</a>
+</li>
+<li>
 <a dir='ltr' href='https://research.googleblog.com/search/label/ph.d.%20fellowship'>
 ph.d. fellowship
 </a>
@@ -2104,6 +2114,11 @@ publication
 <li>
 <a dir='ltr' href='https://research.googleblog.com/search/label/Publications'>
 Publications
+</a>
+</li>
+<li>
+<a dir='ltr' href='https://research.googleblog.com/search/label/Quantum%20AI'>
+Quantum AI
 </a>
 </li>
 <li>
@@ -2379,11 +2394,102 @@ Archive
                     
 </span>
 </a>
+<a class='post-count-link' href='https://research.googleblog.com/2018/'>
+2018
+</a>
+</div>
+<div class='items'>
+<ul class='hierarchy'>
+<li class='archivedate collapsed'>
+<div class=''>
+<a class='post-count-link' href='https://research.googleblog.com/2018/04/'>
+Apr
+</a>
+</div>
+<div class='items'>
+</div>
+</li>
+</ul>
+<ul class='hierarchy'>
+<li class='archivedate collapsed'>
+<div class=''>
+<a class='post-count-link' href='https://research.googleblog.com/2018/03/'>
+Mar
+</a>
+</div>
+<div class='items'>
+</div>
+</li>
+</ul>
+<ul class='hierarchy'>
+<li class='archivedate collapsed'>
+<div class=''>
+<a class='post-count-link' href='https://research.googleblog.com/2018/02/'>
+Feb
+</a>
+</div>
+<div class='items'>
+</div>
+</li>
+</ul>
+<ul class='hierarchy'>
+<li class='archivedate collapsed'>
+<div class=''>
+<a class='post-count-link' href='https://research.googleblog.com/2018/01/'>
+Jan
+</a>
+</div>
+<div class='items'>
+</div>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+<ul class='hierarchy'>
+<li class='archivedate collapsed'>
+<div class='intervalToggle'>
+<span class='new-toggle' href='javascript:void(0)'>
+<i class='material-icons arrow'>
+                    &#58821;
+                  </i>
+</span>
+<a class='toggle' href='javascript:void(0)' style='display: none'>
+<span class='zippy'>
+<i class='material-icons'>
+                        &#58821;
+                      </i>
+                      &#160;
+                    
+</span>
+</a>
 <a class='post-count-link' href='https://research.googleblog.com/2017/'>
 2017
 </a>
 </div>
 <div class='items'>
+<ul class='hierarchy'>
+<li class='archivedate collapsed'>
+<div class=''>
+<a class='post-count-link' href='https://research.googleblog.com/2017/12/'>
+Dec
+</a>
+</div>
+<div class='items'>
+</div>
+</li>
+</ul>
+<ul class='hierarchy'>
+<li class='archivedate collapsed'>
+<div class=''>
+<a class='post-count-link' href='https://research.googleblog.com/2017/11/'>
+Nov
+</a>
+</div>
+<div class='items'>
+</div>
+</li>
+</ul>
 <ul class='hierarchy'>
 <li class='archivedate collapsed'>
 <div class=''>
@@ -4479,12 +4585,20 @@ Developers
         });
         //]]>
     </script>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css' rel='stylesheet' type='text/css'/>
+<script language='javascript' src='https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js' type='text/javascript'></script>
+<script language='javascript' src='https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/lang-css.min.js' type='text/javascript'></script>
+<script type='text/javascript'>
+        document.addEventListener('DOMContentLoaded',function() {
+            prettyPrint();
+        });
+    </script>
 <script src='https://apis.google.com/js/plusone.js' type='text/javascript'></script>
 
-<script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/2730144155-widgets.js"></script>
+<script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/202786884-widgets.js"></script>
 <script type='text/javascript'>
-window['__wavt'] = 'AOuZoY7uYzB_cyW5baLF3a8YKxKvtA2LgQ:1508570173933';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d21224994','//research.googleblog.com/2015/06/inceptionism-going-deeper-into-neural.html','21224994');
-_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '21224994', 'title': 'Research Blog', 'url': 'https://research.googleblog.com/2015/06/inceptionism-going-deeper-into-neural.html', 'canonicalUrl': 'https://research.googleblog.com/2015/06/inceptionism-going-deeper-into-neural.html', 'homepageUrl': 'https://research.googleblog.com/', 'searchUrl': 'https://research.googleblog.com/search', 'canonicalHomepageUrl': 'https://research.googleblog.com/', 'blogspotFaviconUrl': 'https://research.googleblog.com/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': true, 'httpsEnabled': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': 'UA-3589841-1', 'encoding': 'UTF-8', 'locale': 'en', 'localeUnderscoreDelimited': 'en', 'languageDirection': 'ltr', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Research Blog - Atom\x22 href\x3d\x22https://research.googleblog.com/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Research Blog - RSS\x22 href\x3d\x22https://research.googleblog.com/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Research Blog - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/21224994/posts/default\x22 /\x3e\n\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Research Blog - Atom\x22 href\x3d\x22https://research.googleblog.com/feeds/5675413448691562451/comments/default\x22 /\x3e\n', 'meTag': '', 'openIdOpTag': '', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'ieCssRetrofitLinks': '\x3c!--[if IE]\x3e\x3cscript type\x3d\x22text/javascript\x22 src\x3d\x22https://www.blogger.com/static/v1/jsbin/3858758734-ieretrofit.js\x22\x3e\x3c/script\x3e\n\x3c![endif]--\x3e', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/9972482233b7560f', 'plusOneApiSrc': 'https://apis.google.com/js/plusone.js', 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Google+', 'key': 'googlePlus', 'shareMessage': 'Share to Google+', 'target': 'googleplus'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'googlePlusShareButtonWidth': 300, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en\x27};\x3c/script\x3e'}, 'hasCustomJumpLinkMessage': false, 'jumpLinkMessage': 'Read more', 'pageType': 'item', 'postId': '5675413448691562451', 'postImageThumbnailUrl': 'https://4.bp.blogspot.com/-tTYZpdJ18bg/VYITAO4s_uI/AAAAAAAAAlE/L7VMImFFt_M/s72-c/noise-to-banana.png', 'postImageUrl': 'https://4.bp.blogspot.com/-tTYZpdJ18bg/VYITAO4s_uI/AAAAAAAAAlE/L7VMImFFt_M/s640/noise-to-banana.png', 'pageName': 'Inceptionism: Going Deeper into Neural Networks', 'pageTitle': 'Research Blog: Inceptionism: Going Deeper into Neural Networks'}}, {'name': 'features', 'data': {'lazy_images': 'false', 'unsupported_browser_message': 'false', 'lightbox_img_parsing': 'true', 'video_theatre_support': 'true', 'sharing_get_link_dialog': 'false', 'sharing_native': 'false'}}, {'name': 'messages', 'data': {'edit': 'Edit', 'linkCopiedToClipboard': 'Link copied to clipboard!', 'ok': 'Ok', 'postLink': 'Post Link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Inceptionism: Going Deeper into Neural Networks', 'description': 'Posted by Alexander Mordvintsev, Software Engineer, Christopher Olah, Software Engineering Intern and Mike Tyka, Software Engineer   Update ...', 'featuredImage': 'https://4.bp.blogspot.com/-tTYZpdJ18bg/VYITAO4s_uI/AAAAAAAAAlE/L7VMImFFt_M/s640/noise-to-banana.png', 'url': 'https://research.googleblog.com/2015/06/inceptionism-going-deeper-into-neural.html', 'type': 'item', 'isSingleItem': true, 'isMultipleItems': false, 'isError': false, 'isPage': false, 'isPost': true, 'isHomepage': false, 'isArchive': false, 'isLabelSearch': false, 'postId': 5675413448691562451}}]);
+window['__wavt'] = 'AOuZoY7deOuNw3hI7n-YUjAgvJGllOFHVg:1522952849137';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d21224994','//research.googleblog.com/2015/06/inceptionism-going-deeper-into-neural.html','21224994');
+_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '21224994', 'title': 'Research Blog', 'url': 'https://research.googleblog.com/2015/06/inceptionism-going-deeper-into-neural.html', 'canonicalUrl': 'https://research.googleblog.com/2015/06/inceptionism-going-deeper-into-neural.html', 'homepageUrl': 'https://research.googleblog.com/', 'searchUrl': 'https://research.googleblog.com/search', 'canonicalHomepageUrl': 'https://research.googleblog.com/', 'blogspotFaviconUrl': 'https://research.googleblog.com/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': true, 'httpsEnabled': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': 'UA-3589841-1', 'encoding': 'UTF-8', 'locale': 'en', 'localeUnderscoreDelimited': 'en', 'languageDirection': 'ltr', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Research Blog - Atom\x22 href\x3d\x22https://research.googleblog.com/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Research Blog - RSS\x22 href\x3d\x22https://research.googleblog.com/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Research Blog - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/21224994/posts/default\x22 /\x3e\n\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Research Blog - Atom\x22 href\x3d\x22https://research.googleblog.com/feeds/5675413448691562451/comments/default\x22 /\x3e\n', 'meTag': '', 'openIdOpTag': '', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'ieCssRetrofitLinks': '\x3c!--[if IE]\x3e\x3cscript type\x3d\x22text/javascript\x22 src\x3d\x22https://www.blogger.com/static/v1/jsbin/3658603751-ieretrofit.js\x22\x3e\x3c/script\x3e\n\x3c![endif]--\x3e', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/3e8dba6853d09c73', 'plusOneApiSrc': 'https://apis.google.com/js/plusone.js', 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Google+', 'key': 'googlePlus', 'shareMessage': 'Share to Google+', 'target': 'googleplus'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'googlePlusShareButtonWidth': 300, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en\x27};\x3c/script\x3e'}, 'hasCustomJumpLinkMessage': false, 'jumpLinkMessage': 'Read more', 'pageType': 'item', 'postId': '5675413448691562451', 'postImageThumbnailUrl': 'https://4.bp.blogspot.com/-tTYZpdJ18bg/VYITAO4s_uI/AAAAAAAAAlE/L7VMImFFt_M/s72-c/noise-to-banana.png', 'postImageUrl': 'https://4.bp.blogspot.com/-tTYZpdJ18bg/VYITAO4s_uI/AAAAAAAAAlE/L7VMImFFt_M/s640/noise-to-banana.png', 'pageName': 'Inceptionism: Going Deeper into Neural Networks', 'pageTitle': 'Research Blog: Inceptionism: Going Deeper into Neural Networks'}}, {'name': 'features', 'data': {'lazy_images': 'false', 'sharing_get_link_dialog': 'true', 'sharing_native': 'false'}}, {'name': 'messages', 'data': {'edit': 'Edit', 'linkCopiedToClipboard': 'Link copied to clipboard!', 'ok': 'Ok', 'postLink': 'Post Link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Inceptionism: Going Deeper into Neural Networks', 'description': 'Posted by Alexander Mordvintsev, Software Engineer, Christopher Olah, Software Engineering Intern and Mike Tyka, Software Engineer   Update ...', 'featuredImage': 'https://4.bp.blogspot.com/-tTYZpdJ18bg/VYITAO4s_uI/AAAAAAAAAlE/L7VMImFFt_M/s640/noise-to-banana.png', 'url': 'https://research.googleblog.com/2015/06/inceptionism-going-deeper-into-neural.html', 'type': 'item', 'isSingleItem': true, 'isMultipleItems': false, 'isError': false, 'isPage': false, 'isPost': true, 'isHomepage': false, 'isArchive': false, 'isLabelSearch': false, 'postId': 5675413448691562451}}]);
 _WidgetManager._RegisterWidget('_HeaderView', new _WidgetInfo('Header1', 'header', null, document.getElementById('Header1'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', null, document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'showBacklinks': true, 'postId': '5675413448691562451', 'legacyCommentModerationUrl': 'https://www.blogger.com/moderate-legacy-comment.g?blogID\x3d21224994', 'iframeCommentsId': 'gpluscomments', 'viewType': 'FILTERED_POSTMOD', 'useNgc': false}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML8', 'sidebar-top', null, document.getElementById('HTML8'), {}, 'displayModeFull'));
